<resources>
    <string name="app_name">Weiba</string>
    <string name="oauth2accessSuccess">授权成功</string>


    <!-- 发布微博界面-->
    <string name="back">返回</string>
    <string name="post_weibo">内容</string>
    <string name="send">biubiu</string>
    <string name="post_as_comment">同时作为评论发布</string>
    <string name="cb_post_weibo">同时发布一条微博</string>
    <string name="empty"></string>
    <string name="text_count">140</string>
    <string name="talk_something">说点啥呗</string>


    <!-- 主页个人中心-->
    <string name="screen_name">昵称</string>
    <string name="location">位置</string>
    <string name="description">描述</string>
    <string name="zero">0</string>
    <string name="friends">关注</string>
    <string name="weibo">微博</string>
    <string name="follows">粉丝</string>
    <string name="favorites">收藏</string>
    <string name="self_center">个人中心</string>

</resources>
