<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        layout="@layout/main_title_layout"
        />
    <cn.bingoogolapple.refreshlayout.BGARefreshLayout
        android:id="@+id/rl_self_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-14.0dip" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/info"
                        android:layout_width="fill_parent"
                        android:layout_height="90.0dip" >

                        <ImageView
                            android:id="@+id/photo"
                            android:layout_width="50.0dip"
                            android:layout_height="50.0dip"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:src="@drawable/ic_launcher"
                            android:clickable="true"
                            android:padding="5.0dip" />

                        <LinearLayout
                            android:id="@+id/buttons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="13.0dip" >

                            <Button
                                android:id="@+id/change"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:background="@drawable/button_change" />

                            <LinearLayout
                                android:id="@+id/attention"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:gravity="center"
                                android:minHeight="20.0dip"
                                android:minWidth="75.0dip"
                                android:visibility="gone" >

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal" >

                                    <TextView
                                        android:id="@+id/attention_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:textColor="@color/text_color"
                                        android:textSize="15.0sp" />

                                    <ProgressBar
                                        android:id="@+id/attention_progress"
                                        style="?android:attr/progressBarStyleSmall"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:layout_marginLeft="3.0dip"
                                        android:layout_toRightOf="@id/attention_text"
                                        android:indeterminateDrawable="@drawable/progressbar"
                                        android:visibility="gone" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/line1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/photo"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:layout_marginTop="5.0dip"
                            android:layout_toLeftOf="@id/buttons"
                            android:layout_toRightOf="@id/photo"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" >

                                <!-- 姓名 -->

                                <TextView
                                    android:id="@+id/name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:text="@string/screen_name"
                                    android:textColor="@color/text_color"
                                    android:textSize="15.0sp" />
                                <!-- 性别 -->

                                <ImageView
                                    android:id="@+id/sex"
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_marginLeft="5.0dip"
                                    android:src="@drawable/userinfo_icon_male" />
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/intro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/line1"
                            android:layout_below="@id/line1"
                            android:layout_marginBottom="10.0dip"
                            android:layout_marginRight="10.0dip"
                            android:layout_marginTop="4.0dip"
                            android:layout_toLeftOf="@id/buttons"
                            android:singleLine="true"
                            android:textColor="#ff484848"
                            android:textSize="13.0dip" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:src="@drawable/list_divider" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleInverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150.0dip"
                    android:indeterminateDrawable="@drawable/progressbar"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/common_card_background_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/location"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_selfinfoAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tv_address"
                        android:textColor="@color/text_color"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/common_card_background_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/description"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_selfDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/description"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
            <!-- 微博话题 粉丝条数布局 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <!-- 关注 -->

                <LinearLayout
                    android:id="@+id/ll_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/common_card_background_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_selfinfoFriendsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/myblue"
                        android:textSize="16sp" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/friends"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" >
                    </TextView>
                </LinearLayout>
                <!-- 微博 -->

                <LinearLayout
                    android:id="@+id/ll_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/common_card_background_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_selfinfoStatusCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/myblue"
                        android:textSize="16sp" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/weibo"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" >
                    </TextView>
                </LinearLayout>
                <!-- 粉丝 -->

                <LinearLayout
                    android:id="@+id/ll_follows"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/common_card_background_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_selfinfoFollowsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/myblue"
                        android:textSize="16sp" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/follows"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" >
                    </TextView>
                </LinearLayout>
                <!-- 话题 -->

                <LinearLayout
                    android:id="@+id/ll_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/common_card_background_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_selfinfoFavouritesCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@color/myblue"
                        android:textSize="16sp" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/favorites"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="最新微博" />

            <include layout="@layout/selfinfo_status_item" />
        </LinearLayout>
    </ScrollView>
    </cn.bingoogolapple.refreshlayout.BGARefreshLayout>


</LinearLayout>